# postfacta

./: .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum  justfile  main.go  main.py  pyproject.toml  pytest.ini  specs.json
.github/: pull_request_template.md
.github/workflows/: compliance.yaml  docker.yaml  main.yaml  pre-commit.yaml
api/configs/: configs.go  configs_test.go
api/core/: models.go  models_test.go
api/db/: db.go  errors.go  local.go  supabase.go
api/entry/: models.go  models_test.go
api/environment/: environment.go  environment_test.go
api/httperror/: error_handling.go  error_handling_test.go  errors.go  errors_test.go
api/integration/: db_mock.go  helpers.go  incidents_test.go  server.go  suite_test.go  system_test.go
api/logging/: context.go  logger.go  logger_test.go  logging.go  logging_test.go
api/router/: cors.go  router.go
api/router/headers/: headers.go  headers_test.go
api/router/system/: metrics.go  model.go  root_handlers.go  routes.go
api/router/v0/: handlers.go  routes.go
api/validation/: validation.go  validation_test.go
docs/: TECHSPEC.md
docs/assessments/: 20260217-SRE.md  README.md
postfacta/: __init__.py  service.py
postfacta/core/: __init__.py  database.py  environment.py  errors.py  models.py
postfacta/routes/: __init__.py
scripts/: create_mock_data.py  get_list_of_incidents.py  get_single_incident.py  run_server_requests.py
tests/: __init__.py  conftest.py  test_base_service.py  test_integration.py
tests/testutils/: __init__.py
(+2 files in other folders)
